[package]
name = "gcp-observability-rs"
version = "0.1.0"
edition = "2021"
description = "Lightweight Google Cloud Platform observability client using gcloud CLI"
license = "Apache-2.0"
repository = "https://github.com/your-username/gcp-observability-rs"
documentation = "https://docs.rs/gcp-observability-rs"
readme = "README.md"
keywords = ["gcp", "google-cloud", "observability", "monitoring", "logging"]
categories = ["development-tools::debugging", "web-programming"]
authors = ["Your Name <your.email@example.com>"]

[dependencies]
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
tokio = { version = "1", features = ["process", "fs", "macros", "rt-multi-thread"] }
crossbeam = "0.8.4"
async-trait = "0.1.89"

[features]
default = ["logging", "monitoring", "tracing"]
logging = []
monitoring = []
tracing = []

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
