[package]
name = "gcp-rust-tools"
version = "0.2.1"
edition = "2021"
description = "Comprehensive Google Cloud Platform tools for Rust: Observability (Logs, Metrics, Traces) and PubSub"
license = "Apache-2.0"
repository = "https://github.com/santiamoretti/gcp-rust-tools"
documentation = "https://docs.rs/gcp-rust-tools"
readme = "README.md"
keywords = ["gcp", "google-cloud", "observability", "pubsub", "logging"]
categories = ["development-tools::debugging", "web-programming"]
authors = ["Santiago Amoretti"]

[dependencies]
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
tokio = { version = "1", features = ["process", "fs", "macros", "rt-multi-thread"] }
crossbeam = "0.8.4"
async-trait = "0.1.89"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

# Google Cloud Official Crates
google-cloud-pubsub = "0.27.0"
google-cloud-auth = "0.16.0"
google-cloud-googleapis = { version = "0.14.0", features = ["pubsub"] }

[features]
default = ["logging", "monitoring", "tracing"]
logging = []
monitoring = []
tracing = []

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
